# apollony

./: README.md  apollony.cabal  stack.yaml
src/: Fractal1.hs  Fractal2.hs  Fractal2anim.hs  Fractal3.hs  Fractal3anim.hs
src/Apollony/: Apollony1.hs  Apollony2.hs  Apollony3.hs
src/Soddy/: SoddyCircle.hs  SoddyCircle2.hs
src/ThreeCircles/: Circumcircle.hs  ThreeCircles.hs
