name:                apollony
version:             0.1.0.0
homepage:            https://github.com/stla/apollony#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fractal1
                     , Soddy.SoddyCircle
                     , Apollony.Apollony1
                     , Apollony.Apollony2
                     , Fractal2
                     , Fractal2anim
                     , Soddy.SoddyCircle2
                     , Apollony.Apollony3
                     , ThreeCircles.Circumcircle
                     , ThreeCircles.ThreeCircles
                     , Fractal3
                     , Fractal3anim
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , directory
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/apollony
